<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbleft"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/left_view_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/left_view_caption"
            android:textColor="@color/green"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbright"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/right_view_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:text="@string/right_view_caption"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/turnup" />

    <ImageButton
        android:id="@+id/map_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_search"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/map_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_add"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map_search_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageButton
        android:id="@+id/map_liked_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_add"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_liked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/map_search_button"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageButton
        android:id="@+id/map_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_account"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/add_location"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:text="@string/map_switch_caption"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@+id/map_search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>