<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    tools:context=".UserActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/turnup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="Username: "
        android:textColor="#ababab"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/your_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/your_name" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="130dp"
        android:ems="7"
        android:inputType="textPersonName"
        android:text="Guest"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/managelist"
        app:layout_constraintTop_toBottomOf="@+id/color4_spinner1" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/black"
        android:text="Sign Out"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/reset_prefs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/your_name"
        app:layout_constraintTop_toBottomOf="@+id/done_button" />


    <TextView
        android:id="@+id/UI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="UI Preferences"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_name" />

    <Button
        android:id="@+id/reset_prefs"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:backgroundTint="@color/black"
        android:text="Reset"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/color1_spinner1"
        app:layout_constraintEnd_toEndOf="@+id/color1_spinner2"
        app:layout_constraintStart_toStartOf="@+id/color1_spinner1" />

    <View
        android:id="@+id/UIview"
        android:layout_width="168dp"
        android:layout_height="2dp"
        android:layout_gravity="start"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@+id/UI"
        app:layout_constraintTop_toBottomOf="@+id/UI" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Event List:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/color1_spinner1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UIview" />

    <Button
        android:id="@+id/color1_spinner1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Left"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UIview" />

    <Button
        android:id="@+id/color1_spinner2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="Color Right"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/color1_spinner1"
        app:layout_constraintTop_toTopOf="@+id/color1_spinner1" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Manage Event:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/color2_spinner1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Left"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color1_spinner1"
        app:layout_constraintStart_toStartOf="@+id/color1_spinner1"
        app:layout_constraintTop_toBottomOf="@+id/color1_spinner1" />

    <Button
        android:id="@+id/color2_spinner2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Right"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color1_spinner2"
        app:layout_constraintStart_toStartOf="@+id/color1_spinner2"
        app:layout_constraintTop_toBottomOf="@+id/color1_spinner2" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Liked Events:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <Button
        android:id="@+id/color3_spinner1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Left"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color2_spinner1"
        app:layout_constraintStart_toStartOf="@+id/color2_spinner1"
        app:layout_constraintTop_toBottomOf="@+id/color2_spinner1" />

    <Button
        android:id="@+id/color3_spinner2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Right"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color2_spinner2"
        app:layout_constraintStart_toStartOf="@+id/color2_spinner2"
        app:layout_constraintTop_toBottomOf="@+id/color2_spinner2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Chat Room:"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/color4_spinner1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Left"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color3_spinner1"
        app:layout_constraintStart_toStartOf="@+id/color3_spinner1"
        app:layout_constraintTop_toBottomOf="@+id/color3_spinner1" />

    <Button
        android:id="@+id/color4_spinner2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="Color Right"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/color3_spinner2"
        app:layout_constraintStart_toStartOf="@+id/color3_spinner2"
        app:layout_constraintTop_toBottomOf="@+id/color3_spinner2" />


    <TextView
        android:id="@+id/managelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="Manage Events"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/manageview"
        android:layout_width="173dp"
        android:layout_height="2dp"
        android:layout_gravity="start"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@+id/managelist"
        app:layout_constraintTop_toBottomOf="@+id/managelist" />

    <ListView
        android:id="@+id/manage_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="420dp"
        android:clipToPadding="false"
        android:divider="@null"
        android:paddingBottom="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageview"
        tools:listitem="@layout/manage_event_item" />

    <ImageButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_done"
        android:minWidth="80dp"
        android:minHeight="80dp"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>